# gostop

./: .justfile  README.rst  TODO.md  pyproject.toml
gostop/core/: card.py  gamestate.py
html/: index.html
src/gostop/: __init__.py  __main__.py  hand.py  humanagent.py  randomagent.py  utils.py
tests/: test_card.py  test_deck.py  test_gamestate.py  test_hand.py  test_humanagent.py
